<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_avatar"
            android:contentDescription="@string/account_photo" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <TextView
            android:id="@+id/tv_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_name"
            tools:text="name_field" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_gender_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gender"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_gender" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_gender" />

        <TextView
            android:id="@+id/tv_dob_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_dob"
            tools:text="@string/dob_field" />

        <TextView
            android:id="@+id/tv_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dob" />

        <TextView
            android:id="@+id/tv_nationality_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nationality_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_nationality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_nationality" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nationality" />

        <TextView
            android:id="@+id/tv_email_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_phone_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_phone" />

        <TextView
            android:id="@+id/tv_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

        <TextView
            android:id="@+id/tv_cell_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cell_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cell"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_cell" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cell" />

        <TextView
            android:id="@+id/tv_city_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_city" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city" />

        <TextView
            android:id="@+id/tv_state_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/state_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_state" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_state" />

        <TextView
            android:id="@+id/tv_country_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/country_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_country" />

        <TextView
            android:id="@+id/tv_postcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postcode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country" />

        <TextView
            android:id="@+id/tv_postcode_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/postcode_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_postcode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_postcode" />

        <TextView
            android:id="@+id/tv_registered_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_postcode" />

        <TextView
            android:id="@+id/tv_registered_date_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/registered_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_registered_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_registered_date" />

        <TextView
            android:id="@+id/tv_registered_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_age"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_registered_date" />

        <TextView
            android:id="@+id/tv_registered_age_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/at_age_field"
            app:layout_constraintBottom_toBottomOf="@+id/tv_registered_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/center"
            app:layout_constraintTop_toTopOf="@+id/tv_registered_age" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.28" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>